# sobek

./: .gitignore  CLAUDE.md  README.md  agents.json  components.json  config.ts  next.config.ts  package-lock.json  package.json  test.sol  tools.json  vercel.json  vitest.config.ts
__tests__/: api-routes.test.ts  create-order.test.ts  create-product.test.ts  create-transaction.test.ts  erc8004.test.ts  reputation.test.ts  resolve-dispute.test.ts  telegram-webhook.test.ts
agent_configs/: sobek.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: SobekMascot.tsx  buy-native-button.tsx  buy-product-button.tsx  buy-task-button.tsx  click-effect.tsx  custom-cursor.tsx  header.tsx  link-telegram.tsx  orb-scales.tsx  scale-background.tsx  scale-cells.ts  settings-link.tsx  sobek-logo.tsx  sobek-widget.tsx  telegram-debug.tsx
config/: constants.ts  env.ts  tokens.ts  wagmi.ts
contexts/: auth-context.tsx
contracts/: README.md  deploy-args.ts  hardhat.config.ts  package.json  pnpm-lock.yaml
hooks/: useAgentStatus.ts  useSobekVoice.ts  useWalletAuth.ts
lib/: base-escrow.ts  erc8004-register.ts  erc8004.ts  hedera-dispute.ts  hedera-hcs.ts  hedera-schedule.ts  hedera.ts  reputation.ts
scripts/: create-hcs-topic.ts  generate-scales.ts  register-agent.ts  test-full-e2e.ts  test-hcs-reputation.ts  test-hedera-schedule.ts  test-hedera-timer.ts  test-mainnet-e2e.ts
slither-service/: pyproject.toml
supabase/: config.toml
tool_configs/: get_products.json  get_sellers.json  initiate_payment.json  initiate_swap.json
utils/: telegram.ts
(+117 files in other folders)
